[REFACTOR] Async execution for travel distance calculations